added contact section

--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daniel Arackal's Portfolio</title>
-    <link rel="stylesheet" href="../css/indexStyle.css">
+    <link rel="stylesheet" href="css/indexStyle.css">
 </head>
 <body>
     <header>
-        <h1>Daniel Arackal's Portfolio</h1>
+        <h1>Daniel Arackal</h1>
     </header>
     <nav>
         <a href="index.html">Home</a>
-        <a href="about.html">About Me</a>
-        <a href="projects.html">Projects</a>
-        <a href="contact.html">Contact</a>
+        <a href="html/about.html">About Me</a>
+        <a href="html/projects.html">Projects</a>
+        <a href="html/contact.html">Contact</a>
     </nav>
     <div class="container">
         <div class="welcome">
