--- a/html/about.html
+++ b/html/about.html
@@ -11,7 +11,7 @@
         <h1>Daniel Arackal</h1>
     </header>
     <nav>
-        <a href="index.html">Home</a>
+        <a href="../index.html">Home</a>
         <a href="about.html">About Me</a>
         <a href="projects.html">Projects</a>
         <a href="contact.html">Contact</a>
@@ -23,7 +23,7 @@
         </div>
     </div>
     <footer>
-        <p>&copy; 2024 Daniel Arackal</p>
+        <p>2024 Daniel Arackal</p>
     </footer>
 </body>
 </html>
