added logo and favicon

--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
 </head>
 <body>
     <header>
-        <h1>Daniel Arackal</h1>
+        <div class="logo">
+            <a href="index.html">
+                <img src="images/logo/daniel logo base.png" alt="D">
+            </a>
+        </div>
+        <div class="header-title">
+            <img src="images/logo/daniel logo name base.png" alt="Daniel Arackal">
+        </div>
     </header>
     <nav>
         <a href="index.html">Home</a>
@@ -37,8 +44,8 @@
         </div>
         <div class="skills">
             <h2>Skills Overview</h2>
-            <p><strong>Technical Skills:</strong> Python, JavaScript, C++, HTML, CSS, SQL, etc.</p>
-            <p><strong>Certifications:</strong> Microsoft Excel and Access</p>
+            <p><strong>Technical Skills:</strong> Python, JavaScript, C++, HTML, CSS, SQL.</p>
+            <p><strong>Certifications:</strong> MyEducator Microsoft Excel and Access</p>
         </div>
     </div>
     <footer>
