--- a/html/projects.html
+++ b/html/projects.html
@@ -8,7 +8,14 @@
 </head>
 <body>
     <header>
-        <h1>Projects</h1>
+        <div class="logo">
+            <a href="../index.html">
+                <img src="../images/logo/daniel logo base.png" alt="D">
+            </a>
+        </div>
+        <div class="header-title">
+            <img src="../images/logo/daniel logo name base.png" alt="Daniel Arackal">
+        </div>
     </header>
     <nav>
         <a href="../index.html">Home</a>
