changed home page info

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="container">
         <div class="welcome">
             <h2>Welcome to Daniel Arackal's Portfolio</h2>
-            <p>I am a Computer Engineering student at Texas A&M University, passionate about technology, programming, and innovative projects.</p>
+            <p>I am a Data Engineering student at Texas A&M University, passionate about technology, programming, and innovative projects.</p>
         </div>
         <div class="projects">
             <div class="project">
